# sned

./: .gitignore  .lsp.json  Cargo.toml  Makefile  README.md  build.rs  rust-toolchain.toml
.github/workflows/: test.yml
benches/: README.md  anchor_reconciliation.rs  context_curation.rs  context_truncation.rs  edit_application.rs  file_context_tracking.rs  hook_execution.rs  memory.rs  provider_serialization.rs  provider_stream.rs  startup.rs  symbol_indexing.rs
proto/host/: diff.proto  env.proto  testing.proto  window.proto  workspace.proto
proto/sned/: browser.proto  checkpoints.proto  commands.proto  common.proto  file.proto  hooks.proto  models.proto  slash.proto  state.proto  task.proto  ui.proto  web.proto  worktree.proto
scripts/: INDEX.md  README.md  analyze-dhat-heap.sh  bench-vs-opencode.sh  build-freebsd-amd64.sh  build-linux-amd64.sh  build-macos-arm64.sh  build-macos-x86_64.sh  build-release-package.sh  build-universal-macos.sh  homebrew-formula.sh  notarize-macos.sh  profile-memory.sh  sign-macos.sh  smoke-test-terminals.sh  sned-pty-helper  tui-smoke-test.sh  tui_smoke_harness.py
scripts/bench-fixtures/: long.txt  medium.txt
src/: error.rs  exit_codes.rs  lib.rs  main.rs  test_support.rs
src/cli/: actionable_errors.rs  colors.rs  image_input.rs  interactive.rs  markdown.rs  mod.rs  output.rs  redact.rs  slash_commands.rs  spinner.rs  subcommands.rs  syntax_highlight.rs  text_utils.rs
src/cli/tui/: ansi_converter.rs  app.rs  history.rs  mod.rs  plan_panel.rs  theme.rs
src/core/: agent_loop.rs  agent_types.rs  anchor_dictionary.rs  approval.rs  cancellation.rs  checkpoints.rs  context_tracking.rs  edit_batch.rs  file_editor.rs  file_search.rs  hash_utils.rs  hook_cache.rs  hooks.rs  mentions.rs  mod.rs  plan_state.rs  provider_retry.rs  shadow_git.rs  stream_parsing.rs  tool_output.rs  workspace.rs
src/core/context/: context_loader.rs  context_manager.rs  context_window.rs  instructions.rs  mod.rs  model_detect.rs  system_prompt.rs  tool_examples.rs  trackers.rs
src/core/tools/: definitions.rs  mod.rs
src/core/tools/handlers/: ask_followup_question.rs  attempt_completion.rs  condense.rs  diagnostics_scan.rs  edit_file.rs  error_guidance.rs  execute_command.rs  find_symbol_references.rs  get_file_skeleton.rs  get_function.rs  list_files.rs  list_skills.rs  mod.rs  new_task.rs  plan_mode_respond.rs  read_file.rs  rename_symbol.rs  replace_symbol.rs  search_files.rs  summarize_task.rs  use_skill.rs  use_subagents.rs  web_fetch.rs  write_to_file.rs
src/providers/: anthropic.rs  deepseek.rs  env_auth.rs  gemini.rs  gemini_format.rs  groq.rs  minimax.rs  mock.rs  mod.rs  openai.rs  openrouter.rs  xai.rs
src/services/: mod.rs  telemetry.rs
src/services/symbol_index/: db.rs  mod.rs
src/services/tree_sitter/: mod.rs  parser.rs  queries.rs  symbol_context.rs
src/storage/: disk.rs  global_state.rs  migration.rs  mod.rs  secrets.rs  state_manager.rs  task_storage.rs
src/terminal/: command_pty.rs  input.rs  mod.rs  picker.rs  vt_renderer.rs
tests/: anchor_edit_parity.rs  ast_fixtures.rs  cli_tests.rs  context_selection_parity.rs  e2e_task_test.rs  memory_leak.rs  migration_e2e.rs  mock_provider_integration.rs  provider_stream_parity.rs  storage_tests.rs  terminal_smoke.rs  terminal_tests.rs  tool_result_formatting_parity.rs  tree_sitter_fixtures.rs
tests/fixtures/go/: sample.go
tests/fixtures/python/: find_symbol_references_class_reference.txt  get_function_basic_function.txt  sample.py  tests.json
tests/fixtures/rust/: find_symbol_references_struct_reference.txt  get_function_basic_function.txt  sample.rs  tests.json
tests/fixtures/typescript/: sample.ts
tests/migration_fixtures/corrupt/: endpoints.json
tests/migration_fixtures/corrupt/data/settings/: global_settings.json
tests/migration_fixtures/full/: .secrets.json  endpoints.json
tests/migration_fixtures/full/data/settings/: global_settings.json
tests/migration_fixtures/full/data/state/: taskHistory.json
tests/migration_fixtures/full/data/tasks/task-001/: api_conversation_history.json
tests/migration_fixtures/full/data/tasks/task-002/: api_conversation_history.json
tests/migration_fixtures/minimal/: endpoints.json
tests/migration_fixtures/minimal/data/settings/: global_settings.json
tests/migration_fixtures/vscode_migration/: endpoints.json
tests/migration_fixtures/vscode_migration/data/settings/: global_settings.json
user-scripts/: INDEX.md  analyze-dhat-heap.py  profile-memory.sh  setup-zig-0.15.sh  sned-pty-helper.c  tui-smoke-test.sh
