[package]
name = "sned"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
description = "Sned native CLI – AI coding assistant in your terminal"
license = "MIT OR Apache-2.0"

# Dependency Policy:
# - Critical dependencies (tokio, tree-sitter) are pinned to minor versions for ABI/MSRV stability
# - Security-sensitive dependencies (reqwest, rusqlite) updated promptly on advisories
# - Optional tree-sitter language grammars may appear unused when their feature is disabled
[package.metadata.cargo-machete]
# tree-sitter-* are optional and used via feature flags
ignored = ["tree-sitter-rust", "tree-sitter-javascript", "tree-sitter-python", "tree-sitter-typescript", "tree-sitter-go", "tree-sitter-c", "tree-sitter-cpp", "tree-sitter-c-sharp", "tree-sitter-ruby", "tree-sitter-java", "tree-sitter-php", "tree-sitter-swift"]

[features]
default = ["lang-rust", "lang-javascript", "lang-python", "lang-typescript", "lang-go"]
dhat-heap = ["dep:dhat"]
lang-rust = ["dep:tree-sitter-rust"]
lang-javascript = ["dep:tree-sitter-javascript"]
lang-python = ["dep:tree-sitter-python"]
lang-typescript = ["dep:tree-sitter-typescript"]
lang-go = ["dep:tree-sitter-go"]
lang-c = ["dep:tree-sitter-c"]
lang-cpp = ["dep:tree-sitter-cpp"]
lang-c-sharp = ["dep:tree-sitter-c-sharp"]
lang-ruby = ["dep:tree-sitter-ruby"]
lang-java = ["dep:tree-sitter-java"]
lang-php = ["dep:tree-sitter-php"]
lang-swift = ["dep:tree-sitter-swift"]

[dependencies]
clap = { version = "4", features = ["derive", "env", "string"] }
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util", "io-std", "process", "signal"] }  # pinned to 1.52.x for MSRV
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio-stream = "0.1"
tokio-util = "0.7"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
chrono = "0.4"
walkdir = "2"
regex = "1"
similar = "2"
fastrand = "2"
ignore = "0.4"
lru = "0.15"
tree-sitter = "0.26"  # Updated from 0.25, pinned ABI
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-javascript = { version = "0.25", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.25", optional = true }
tree-sitter-c = { version = "0.24", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }
tree-sitter-c-sharp = { version = "0.23", optional = true }
tree-sitter-ruby = { version = "0.23", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
tree-sitter-php = { version = "0.24", optional = true }
tree-sitter-swift = { version = "0.7.2", optional = true }  # Updated to 0.7.2
streaming-iterator = "0.1"
crossterm = "0.29"  # Updated from 0.28.1
nix = { version = "0.31", features = ["signal", "process", "user", "term", "fs"] }  # Updated from 0.29
libc = "0.2"
dirs = "6"
keyring = "3.6"  # Updated from 3.0.0, 4.0 has breaking API changes
url = "2"
serde_yml = "0.0.12"
notify = "8.2"  # Updated from 7.0.0
fs2 = "0.4.3"
parking_lot = "0.12"
rusqlite = { version = "0.37", features = ["bundled"] }  # Updated from 0.32, 0.39+ removed u64/usize FromSql/ToSql
dhat = { version = "0.3", optional = true }

num_cpus = "1"
ulid = "1"
rayon = "1.10"
base64 = "0.22"
clap_complete = "4.6"  # Updated to 4.6.x
vte = "0.15.0"
unicode-width = "0.2"
once_cell = "1.21"
indexmap = "2"
# libghostty-vt removed (unused dependency)

[build-dependencies]

[dev-dependencies]
assert_cmd = "2.2"  # Updated to 2.2.x
predicates = "3"
tempfile = "3"
criterion = { version = "0.8", features = ["html_reports"] }  # Updated to 0.8

[[bench]]
name = "hook_execution"
harness = false

[[bench]]
name = "file_context_tracking"
harness = false

[[bench]]
name = "symbol_indexing"
harness = false

[[bench]]
name = "provider_serialization"
harness = false

[[bench]]
name = "anchor_reconciliation"
harness = false

[[bench]]
name = "context_truncation"
harness = false

[[bench]]
name = "edit_application"
harness = false

[[bench]]
name = "startup"
harness = false

[[bench]]
name = "memory"
harness = false

[[bench]]
name = "context_curation"
harness = false

[[bench]]
name = "provider_stream"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
